<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_sort_top_rated">Sort by : Top Rated</string>
    <string name="action_sort_popular">Sort by : Popularity</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="movie_overview_label">Movie Overview</string>
    <string name="action_favourite_movies">Favourite Movies</string>
    <string name="title_activity_movie_details">Movie Details</string>

    <string name="content_authority">com.example.dharan1011.popular_movie_app</string>
    <string name="remove_favorite_label">REMOVE AS FAVOURITE</string>
    <string name="add_favourite_label">MARK AS FAVOURITE</string>
    <string name="title_activity_favourite_movies">Favourite Movies</string>

    <string name="response_error">Unable to fetch data</string>
    <string name="response_failure">Couldn\'t Fetch Content</string>
    <string name="error_connectivity_title">No Connectivity</string>
    <string name="error_connectivity_message">Please connect to internet.</string>
    <string name="movie_trailers_label">Trailers</string>
    <string name="movie_reviews_label">Reviews</string>
    <string name="error_trailers">No trailers to show</string>
    <string name="error_reviews">No Reviews Available</string>
    <string name="youtube_base_url">https://www.youtube.com/watch?v=</string>

    <string name="create_account">Create an account</string>
    <string name="user_name_hint">Name</string>
    <string name="user_city_hint">City</string>
    <string name="password_hint">Password</string>
    <string name="button_already_registered">Do you have an account? Login</string>
    <string name="button_sign_up">Sign Up</string>

    <string name="error_enter_valid_email">Enter a valid email</string>
    <string name="error_password_less_than_six_character_long">Password must be at least 6 characters long</string>
    <string name="check_internet_connectivity">Check internet connectivity</string>
    <string name="toast_problem_creating_account">Problem creating an account</string>
    <string name="account_created_now_verify_it">Account created successfully. Now go to your mailbox and verify it.</string>

    <string name="login_heading">Login</string>
    <string name="main_button_login">Login Now</string>
    <string name="button_forgot_password">Don\'t you remember your password?</string>
    <string name="divider_or">Or</string>
    <string name="button_google_login">Sign in with Google</string>
    <string name="button_sigh_up">Don\'t have an account yet? Sign Up</string>
    <string name="create_account_heading">Create an account</string>
    <string name="reset_password_heading">Send reset password instruction</string>
    <string name="button_sign_not_registered">Sign me up instead</string>
    <string name="email_hint">E-mail address</string>

    <string name="heading_forgot_password">Forgot password?</string>
    <string name="sub_haeding_forgot_password">Give us your email, we\'ll reset that up</string>
    <string name="error_enter_your_name">Enter your name</string>
    <string name="error_enter_your_city">Enter your city</string>
    <string name="button_reset_password">Reset Password</string>

    <string name="toast_authentication_failed">Authentication failed. Please check your email or passowrd</string>
    <string name="toast_password_reset_instruction_sent">Password reset instructions sent to your registered email</string>
    <string name="error_email_not_registered">Please check your email. Looks like you\'re not registered with us</string>
    <string name="sign_out">Sign out</string>
</resources>
