<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.dharan1011.popular_movie_app.SignUpActivity">

    <TextView
        android:id="@+id/sign_up_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/user_name_text_input_layout"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/user_city_and_gender_container"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:hint="@string/user_name_hint"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/user_city_and_gender_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/user_email_text_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_city_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            app:layout_constraintHorizontal_bias="0.25">

            <EditText
                android:id="@+id/user_city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/input_shape"
                android:fontFamily="sans-serif"
                android:gravity="left|center_vertical"
                android:hint="@string/user_city_hint"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/gender_toggle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/user_email_text_input_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/user_city_text_input_layout" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_email_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/user_password_text_input_layout"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/user_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_password_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/divider_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <View

        android:id="@+id/divider_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#cccccc"
        app:layout_constraintBottom_toTopOf="@+id/button_already_registered"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button

        android:id="@+id/button_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:text="Do you have an account? Login"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>